# Job-bot

./: .env.sample  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg
job_bot/data/: active_db.py  db_init.py  init_db.py
job_bot/filters/: jsonfilter.py
job_bot/handlers/: jsonmessages.py
